service/external-elasticsearch-service.yml
  apiVersion: v1
  kind: Service
  metadata:
    name: prodding-hydra-external-elasticsearch-service
  spec:
    externalName: search-es-brickblock-eu4332upq3sdax6p4tfv6q6qrm.eu-west-1.es.amazonaws.com
    type: ExternalName
